crates/compiler/backend/tests/snapshots/bytecode__bytecode@array-coerce.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/array-coerce.reds
---
// Test; (f0)
array.resize 0
local 0
u64.const 3
assign
array.element 0
local 0
u64.const 0
i32.one
assign
array.element 0
local 0
u64.const 1
i32.const 2
assign
array.element 0
local 0
u64.const 2
i32.const 3
assign
local 1
local 0
array.resize 1
local 2
u64.const 3
assign
array.element 1
local 2
u64.const 0
variant.new 2
i32.one
assign
array.element 1
local 2
u64.const 1
variant.new 2
i32.const 2
assign
array.element 1
local 2
u64.const 2
variant.new 2
i32.const 3
invoke.static j25 l4 f1 0000000000000000
local 2
param.end

// AcceptsVariants;array<Variant> (f1)
