crates/compiler/backend/tests/snapshots/bytecode__bytecode@if-else.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/if-else.reds
snapshot_kind: text
---
// Test;Bool (f0)
jump.if_not 14
param 0
return
i32.one
jump 2
return
i32.zero
