crates/compiler/backend/tests/snapshots/bytecode__bytecode@switch.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/switch.reds
snapshot_kind: text
---
// Test;Int32 (f0)
switch 4
invoke.static j30 l0 f1 0000000000000000
param 0
i32.const 4
param.end
switch.label 3 21
i32.one
switch.label 7 15
i32.const 2
switch.label 10 5
i32.const 3
jump 3
switch.default
return
true.const
return
false.const

// OperatorModulo (f1)
