crates/compiler/backend/tests/snapshots/bytecode__bytecode@ternary.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/ternary.reds
---
// Test1;Int32 (f0)
return
cond 50 49
invoke.static j47 l2 f1 0000000000000000
invoke.static j30 l2 f2 0000000000000000
param 0
i32.const 2
param.end
i32.zero
param.end
true.const
false.const

// Test2;Dummy (f3)
return
cond 22 21
ref.to_bool
wref.to_ref
param 1
param 1
wref.null

// OperatorEqual;Int32Int32 (f1)

// OperatorModulo;Int32Int32 (f2)
